도메인과 엔티티 사용 분리 및 JDBC사용 숨김